- Expand lock behavior added - Change background tooltip - Region bug fix - Image bg bug fix - Inline panel refactor, no overflow hidden anymore!
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@11775 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -780,7 +780,7 @@
 .tooltip-bottom .tooltip-content {
 	top: 100%;
 	bottom: auto;
-	margin-top: 14px;
+	margin: 14px 0 0;
 }
 .tooltip-left:before,
 .tooltip-left .tooltip-content,
@@ -793,7 +793,7 @@
 	-ms-transform: translateY(-50%);
 	-o-transform: translateY(-50%);
 	transform: translateY(-50%);
-	margin-bottom: 0;
+	margin: 0;
 }
 .tooltip-left:before,
 .tooltip-left .tooltip-content {
@@ -848,7 +848,7 @@
 }
 .tooltip:hover:before, .tooltip:hover:after,
 a:hover > .tooltip:before, a:hover > .tooltip:after,
-.tooltip-inline:hover .tooltip-content, .tooltip-inline:hover:after {
+.tooltip-inline:hover > .tooltip-content, .tooltip-inline:hover:after {
 	display: block;
 }
 
@@ -1639,7 +1639,7 @@ a.ueditor-action-pickercancel{
 }
 .upfront-region-editing .upfront-region {
 	opacity: 0.5;
-	min-height: 300px;
+	min-height: 90px;
 	z-index: 1;
 }
 .upfront-region-editing .upfront-region .upfront-editable_entities_container {
@@ -1750,22 +1750,31 @@ a.ueditor-action-pickercancel{
 	z-index: 999990;
 	-webkit-transition: top 0.6s, bottom 0.6s, left 0.6s, right 0.6s;
 }
-.upfront-region-container-active .upfront-inline-panels {
+.upfront-region-editing .upfront-inline-panels-active {
 	z-index: 999991;
 }
 .upfront-inline-panels-wrap {
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 .upfront-inline-panel {
 	position: absolute;
 	margin: auto;
 	width: 40px;
 	height: 40px;
-	-webkit-transition: -webkit-transform 0.6s 0.3s;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: visibility 0s linear 0.6s, -webkit-transform 0.6s, opacity 0.6s;
+}
+.upfront-inline-panels-active .upfront-inline-panel {
+	visibility: visible;
+	opacity: 1;
+	-webkit-transform: scale(1);
+	-webkit-transition-delay: 0s;
 }
 .upfront-inline-panel-top {
 	top: 0;
-	-webkit-transform: translate(0, -200%);
+	-webkit-transform: scale(1, 0);
+	-webkit-transform-origin: 50% 0;
 }
 .upfront-inline-panel-top-center {
 	left: 0;
@@ -1787,15 +1796,21 @@ a.ueditor-action-pickercancel{
 }
 .upfront-inline-panel-center-left {
 	left: 0;
-	-webkit-transform: translate(-200%, 0);
+	-webkit-transform: scale(0, 1);
+	-webkit-transform-origin: 0 50%;
 }
 .upfront-inline-panel-center-right {
 	right: 0;
-	-webkit-transform: translate(200%, 0);
+	-webkit-transform: scale(0, 1);
+	-webkit-transform-origin: 100% 50%;
 }
 .upfront-inline-panel-bottom {
 	bottom: 0;
-	-webkit-transform: translate(0, 200%);
+	-webkit-transform: scale(1, 0);
+	-webkit-transform-origin: 50% 100%;
+}
+.upfront-inline-panels-active .upfront-inline-panel-bottom {
+	/*-webkit-animation: upfront-inline-panel-bottom 0.6s 1;*/
 }
 .upfront-inline-panel-bottom-center {
 	left: 0;
@@ -1806,9 +1821,6 @@ a.ueditor-action-pickercancel{
 }
 .upfront-inline-panel-bottom-right {
 	right: 8.3%;
-}
-.upfront-inline-panels-active .upfront-inline-panel {
-	-webkit-transform: translate(0, 0);
 }
 .upfront-inline-panel-size-2 {
 	width: 80px;
@@ -1854,44 +1866,74 @@ a.ueditor-action-pickercancel{
 .upfront-inline-panel-subitem-active .upfront-inline-panel-subitem {
 	border-bottom: 1px solid #2d3945;
 }
+.upfront-inline-panel-subitem-active > .tooltip-content {
+	display: none !important;
+}
+.upfront-inline-panel-subitem {
+	position: relative;
+	z-index: -1;
+}
 .upfront-inline-panel-subitem .upfront-inline-panel-item {
-	background: #284159;
+	visibility: hidden;
 	border-bottom: none;
 	position: relative;
-	-webkit-transform: translate(0, -200%);
-	-webkit-transition: -webkit-transform 0.6s;
+	opacity: 0;
+	-webkit-transform: translateY(-100%);
+	-webkit-transition: visibility 0s linear 0.6s, -webkit-transform 0.6s, opacity 0.6s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item {
+	visibility: visible;
+	background: #284159;
+	opacity: 1;
+	-webkit-transform: translateY(0) !important;
+	-webkit-transition-delay: 0s;
+}
+.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(2) {
+	-webkit-transform: translateY(-200%);
+	-webkit-transition-delay: 0.7s, 0.1s, 0.1s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item:nth-child(2) {
+	-webkit-transition-delay: 0.1s;
+}
+.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(3) {
+	-webkit-transform: translateY(-300%);
+	-webkit-transition-delay: 0.8s, 0.2s, 0.2s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item:nth-child(3) {
+	-webkit-transition-delay: 0.2s;
+}
+.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(4) {
+	-webkit-transform: translateY(-400%);
+	-webkit-transition-delay: 0.9s, 0.3s, 0.3s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item:nth-child(4) {
+	-webkit-transition-delay: 0.3s;
+}
+.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(5) {
+	-webkit-transform: translateY(-500%);
+	-webkit-transition-delay: 1s, 0.4s, 0.4s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item:nth-child(5) {
+	-webkit-transition-delay: 0.4s;
+}
+.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(6) {
+	-webkit-transform: translateY(-600%);
+	-webkit-transition-delay: 1.1s, 0.5s, 0.5s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item:nth-child(6) {
+	-webkit-transition-delay: 0.5s;
+}
+.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(7) {
+	-webkit-transform: translateY(-700%);
+	-webkit-transition-delay: 1.2s, 0.6s, 0.6s;
+}
+.upfront-inline-panel-subitem-active .upfront-inline-panel-item:nth-child(7) {
+	-webkit-transition-delay: 0.6s;
 }
 .upfront-inline-panel-subitem .upfront-inline-panel-item:hover {
 	background: #22384c;
 	box-shadow: 0 0 0 2px rgba(219,236,252,.9);
 	z-index: 100;
-}
-.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(2) {
-	-webkit-transform: translate(0, -300%);
-	-webkit-transition-delay: 0.15s;
-}
-.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(3) {
-	-webkit-transform: translate(0, -400%);
-	-webkit-transition-delay: 0.3s;
-}
-.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(4) {
-	-webkit-transform: translate(0, -500%);
-	-webkit-transition-delay: 0.45s;
-}
-.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(5) {
-	-webkit-transform: translate(0, -600%);
-	-webkit-transition-delay: 0.6s;
-}
-.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(6) {
-	-webkit-transform: translate(0, -700%);
-	-webkit-transition-delay: 0.7s;
-}
-.upfront-inline-panel-subitem .upfront-inline-panel-item:nth-child(7) {
-	-webkit-transform: translate(0, -800%);
-	-webkit-transition-delay: 0.8s;
-}
-.upfront-inline-panel-subitem-active .upfront-inline-panel-item {
-	-webkit-transform: translate(0, 0) !important;
 }
 .upfront-inline-panel-item .upfront-icon {
 	display: block;
